[gd_scene load_steps=16 format=3 uid="uid://qw3qmhc6su1q"]

[ext_resource type="Script" uid="uid://br4548ndx3mxn" path="res://Scripts/Basic/Exit.gd" id="1_y0a1r"]
[ext_resource type="Texture2D" uid="uid://bfp5pnr8gwyx7" path="res://Images/QuizBG2.png" id="2_6qefe"]
[ext_resource type="Texture2D" uid="uid://fq3dkupitt2y" path="res://Images/QuizBG.png" id="3_nt2lm"]
[ext_resource type="Texture2D" uid="uid://dilph5mebhish" path="res://Images/GameBG.jpg" id="4_ao34i"]
[ext_resource type="FontFile" uid="uid://cuao14s32x006" path="res://Fonts/Caroni-Regular.otf" id="5_y61ra"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwfvt"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ueoq2"]
bg_color = Color(0.00392157, 0.380392, 0.180392, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 20
border_color = Color(0.00392157, 0.290196, 0.129412, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apjpy"]
bg_color = Color(0.00392157, 0.321569, 0.14902, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 20
border_color = Color(0.00392157, 0.27451, 0.121569, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t8hlv"]
bg_color = Color(0.00392157, 0.345098, 0.160784, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 20
border_color = Color(0.00392157, 0.290196, 0.129412, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3fhj"]
bg_color = Color(0.619608, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 20
border_color = Color(0.482353, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmibh"]
bg_color = Color(0.501961, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 20
border_color = Color(0.466667, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3b4e"]
bg_color = Color(0.552941, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 20
border_color = Color(0.482353, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Animation" id="Animation_00cv5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_aeqvp"]
resource_name = "popExit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eiau4"]
_data = {
&"RESET": SubResource("Animation_00cv5"),
&"popExit": SubResource("Animation_aeqvp")
}

[node name="Exit" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_y0a1r")

[node name="ExitPage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 721.0
offset_bottom = 480.0
pivot_offset = Vector2(360, 240)
texture = ExtResource("2_6qefe")

[node name="Panel" type="Panel" parent="ExitPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -230.0
offset_right = 354.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vwfvt")

[node name="TextureRect" type="TextureRect" parent="ExitPage/Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 4.0
offset_right = 701.0
offset_bottom = 455.0
texture = ExtResource("3_nt2lm")
expand_mode = 1

[node name="BG" type="TextureRect" parent="ExitPage/Panel"]
modulate = Color(1, 1, 1, 0.333333)
layout_mode = 0
offset_left = -11.0
offset_top = -10.0
offset_right = 709.0
offset_bottom = 470.0
texture = ExtResource("4_ao34i")
expand_mode = 1

[node name="ConfirmExitTitle" type="RichTextLabel" parent="ExitPage/Panel"]
layout_mode = 0
offset_left = 155.0
offset_top = 7.0
offset_right = 522.0
offset_bottom = 105.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("5_y61ra")
theme_override_font_sizes/normal_font_size = 85
bbcode_enabled = true
text = "[center]Confirm Exit[/center]"

[node name="ConfirmExitTitle2" type="RichTextLabel" parent="ExitPage/Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 111.0
offset_right = 704.0
offset_bottom = 185.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/normal_font = ExtResource("5_y61ra")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Are you sure you want to quit?[/center]"
metadata/_edit_lock_ = true

[node name="yButton" type="Button" parent="ExitPage/Panel"]
modulate = Color(0, 0.905882, 0.180392, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 199.0
offset_right = 343.0
offset_bottom = 443.0
scale = Vector2(1, 1e-05)
theme_override_fonts/font = ExtResource("5_y61ra")
theme_override_font_sizes/font_size = 200
theme_override_styles/hover = SubResource("StyleBoxFlat_ueoq2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_apjpy")
theme_override_styles/normal = SubResource("StyleBoxFlat_t8hlv")
text = "Yes"

[node name="nButton" type="Button" parent="ExitPage/Panel"]
modulate = Color(0.780392, 0, 0, 1)
layout_mode = 0
offset_left = 361.0
offset_top = 199.0
offset_right = 699.0
offset_bottom = 443.0
scale = Vector2(1, 1e-05)
theme_override_fonts/font = ExtResource("5_y61ra")
theme_override_font_sizes/font_size = 200
theme_override_styles/hover = SubResource("StyleBoxFlat_o3fhj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dmibh")
theme_override_styles/normal = SubResource("StyleBoxFlat_d3b4e")
text = "No"

[node name="ExitAnimationPlayer" type="AnimationPlayer" parent="ExitPage"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_eiau4")
}

[node name="Effects" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="ExitPage/Panel/yButton" to="." method="_on_y_button_pressed"]
[connection signal="pressed" from="ExitPage/Panel/nButton" to="." method="_on_n_button_pressed"]
